# habr-hexlet

./: pyproject.toml
1_task/: main.py
2_task/genetics_tests/: manage.py
2_task/genetics_tests/genetics_tests/: asgi.py  settings.py  urls.py  wsgi.py
2_task/genetics_tests/tests/: forms.py  models.py  urls.py  views.py
2_task/genetics_tests/tests/migrations/: 0001_initial.py
2_task/genetics_tests/tests/templates/tests/: genetic_test_confirm_delete.html  genetic_test_form.html  genetic_test_list.html  statistics.html
3_task/project/: database.py  models.py
